# blackbox-records

./: .brooks-lint.yaml  .dependency-cruiser.cjs  .editorconfig  .gitignore  .prettierignore  404.html  AGENTS.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  SESSION-TRANSCRIPT-2026-03-01.md  TODO.md  astro.config.mjs  design-qa.md  eslint.config.mjs  knip.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  renovate.json  tsconfig.base.json  tsconfig.boundaries.json  tsconfig.eslint.json  tsconfig.json  wrangler.jsonc
.planning/: BACKLOG.md  LAUNCH-READINESS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UBIQUITOUS_LANGUAGE.md  (+1 more)
tools/artwork-fetcher/: AGENTS.md  README.md  cassette_mockup_overrides.json  cassette_store_artwork_manifest.csv  pyproject.toml
tools/artwork-fetcher/examples/: blackbox_artwork.tsv  blackbox_artwork_overrides.json  blackbox_missing_inventory_artwork.tsv  blackbox_missing_inventory_artwork_manifest_20260704.csv  blackbox_missing_inventory_artwork_manual_review_20260704.tsv
tools/artwork-fetcher/src/artwork_fetcher/: cassette_mockup.py  cd_mockup.py  cli.py  distro_sync.py  files.py  mockup.py  models.py  net.py  release_date_research.py  release_dates.py  runner.py  sources.py  text.py
tools/artwork-fetcher/tests/: test_cassette_mockup.py  test_cd_mockup.py  test_distro_sync.py  test_filename.py  test_images.py  test_mockup.py  test_net.py  test_normalization.py  test_release_date_research.py
tools/artwork-fetcher/tests/fixtures/release_date/: bandcamp.html  discogs.json  dsp.json  musicbrainz.json  retailer.json
(+1830 files in other folders)
