[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox-artwork-fetcher"
version = "0.1.0"
description = "Local release artwork fetcher for reusable CSV/TSV music lists."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "bandcamp_async_api>=0.2.2",
  "discogs-client>=2.3",
  "musicbrainzngs>=0.7",
  "Pillow>=10",
  "requests>=2.31",
]

[project.scripts]
artwork-fetcher = "artwork_fetcher.cli:main"
vinyl-mockup = "artwork_fetcher.mockup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
artwork_fetcher = ["assets/*.png"]
