[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox-artwork-fetcher"
version = "0.1.0"
description = "Local release artwork fetcher for reusable CSV/TSV music lists."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "bandcamp_async_api>=0.2.2",
  "musicbrainzngs>=0.7",
  "Pillow>=10",
  "requests>=2.31",
  "yt-dlp>=2024.8.6",
]

[project.scripts]
artwork-fetcher = "artwork_fetcher.cli:main"
vinyl-mockup = "artwork_fetcher.mockup:main"
cd-front-mockup = "artwork_fetcher.cd_mockup:main"
cassette-front-mockup = "artwork_fetcher.cassette_mockup:main"
distro-sync = "artwork_fetcher.distro_sync:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
artwork_fetcher = ["assets/*.png"]
